--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Contractor TimeTracker</title>
-    <!-- font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500&display=swap"
-      rel="stylesheet"
-    />
     <!-- icons -->
     <link
       href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
+      rel="stylesheet"
+    />
+    <!-- font -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Spartan:300,400&display=swap"
       rel="stylesheet"
     />
   </head>
